--- a/roots/index.html
+++ b/roots/index.html
@@ -11,13 +11,13 @@
     <link rel="preconectar" href="https://fonts.googleapis.com">
     <link rel="preconectar" href="https://fonts.gstatic.com" crossorigin>
     <link href="https: //fonts.googleapis.com/css2? familia= Montserrat:peso@200;400;500;600 & display=swap"
-                rel="stylesheet">
-                <title>Document</title>
+        rel="stylesheet">
+    <title>Document</title>
 </head>
 
 <body>
     <header>
-        <ul class="nav justify-content-end">
+        <ul class="nav justify-content-end nav-top">
             <li class="nav-item">
                 <a class="nav-link" href="#">Para los Padres</a>
             </li>
@@ -31,32 +31,32 @@
         </ul>
         <nav class="navbar navbar-light d-flex flex-row justify-content-center alig-items-center navbar-mod">
             <div class="container d-flex flex-row justify-content-center alig-items-center">
-                <a class="navbar-brand" href="#">
-                    <img src="./assets/logofondo.png" alt="">
+                <a class="navbar-brand" href="./index.html">
+                    <img src="./assets/logofondo.png" class="img-fluid" alt="Logo Grulla">
                 </a>
             </div>
         </nav>
         <h1>Categorias</h1>
-        <ul class="nav justify-content-center d-flex">
-            <li class="nav-item d-flex">
-                <a class="nav-link nav-item-mod" href="#" id="pi">Primera Infancia</a>
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+                <a class="nav-link nav-item-mod" href="./pages/primerainfancia.html" id="pi">Primera Infancia</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-item-mod" href="#" id="jm">Juegos de Mesa</a>
+                <a class="nav-link nav-item-mod" href="./pages/juegosdemesa.html" id="jm">Juegos de Mesa</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-item-mod" href="#" id="rom">Rompecabezas</a>
+                <a class="nav-link nav-item-mod" href="./pages/rompecabezas.html" id="rom">Rompecabezas</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-item-mod" href="#" id="cons">Construccion</a>
+                <a class="nav-link nav-item-mod" href="./pages/construccion.html" id="cons">Construccion</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-item-mod" href="#" id="cs">Ciencia</a>
+                <a class="nav-link nav-item-mod" href="./pages/ciencia.html" id="cs">Ciencia</a>
             </li>
         </ul>
     </header>
     <main>
-        <article class="container row">
+        <article class="row col-lg-12 article_main">
             <div class="div_main col-lg-6">
                 <h2>Banco de descarga con Xilofón</h2>
                 <P>Banco de descarga con xilofón
@@ -68,14 +68,62 @@
                     xilófono directamente.
                 </P>
             </div>
-            <div class="div_main-img col-lg-6">
-                <img src="./assets/ff1-78ac1fe5aa3c867c2a15971853549577-640-0.jpg" alt="">
-                <img src="./assets/xilof1-ebe57e501214a5103615971853550606-640-0.jpg" alt="">
-                <img src="./assets/xilofo1-48a7870bb18270d0f015971853550891-640-0.jpg" alt="">
+            <div class="div_main-img col-lg-6 d-flex row">
+                <!-- <img class="col-lg-12" src="./assets/ff1-78ac1fe5aa3c867c2a15971853549577-640-0.jpg" alt=""> -->
+                <img class="col-lg-6" src="./assets/xilof1-ebe57e501214a5103615971853550606-640-0.jpg" alt="Xilofon">
+                <img class="col-lg-6" src="./assets/xilofo1-48a7870bb18270d0f015971853550891-640-0.jpg" alt="Xilofon">
+            </div>
+        </article>
+        <article class="row col-lg-12 article_main d-flex">
+            <div class="div_main-img col-lg-6 d-flex row justify-content-center">
+                <img class="col-lg-6" src="./assets/7145651f-b310-42c6-947a-0ab21aff4744-5d155cf219ae62b1c216529907489158-640-0.jpeg" alt="Bowling con pelota de goma">
+            </div>
+            <div class="div_main col-lg-6">
+                <h2>Bowling con pelota de goma texturada</h2>
+                <P>Los juguetes de goma con texturas son ideales para despertar la curiosidad en los niños y estimular
+                    su motricidad gruesa, la pelota sensorial se convertirá en un gran aliado durante la etapa del
+                    gateo. Al tener diferentes formas, texturas y colores, motivan a los peques a manipularlas mientras
+                    potencian el desarrollo de su coordinación. Como pueden rodar por el suelo, serán un gran estímulo
+                    para que se animen a gatear.
+                </P>
             </div>
         </article>
     </main>
-    <footer></footer>
+    <footer>
+        <nav class="navbar navbar-expand-lg navbar-light col-lg-12 footer_nav">
+            <div class="container-fluid">
+              <a class="navbar-brand col-lg-6 footer_nav-img" href="./index.html"><img class="col-lg-12" src="./assets/BOLSA-GRULLA_Mesa de trabajo 1.png" alt="Logo Grulla"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse col-lg-6 row" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contacto</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Política de privacidad</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Consultar
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">FAQS</a></li>
+                      <li><a class="dropdown-item" href="#">Medios de pago</a></li>
+                      <li><a class="dropdown-item" href="#">Devoluciones</a></li>
+                      <li><a class="dropdown-item" href="#">Cambios</a></li>
+                    </ul>
+                  </li>
+                </ul>
+                <form class="d-flex footer_search">
+                  <input class="form-control me-2" type="Buscar" placeholder="Buscar" aria-label="Buscar">
+                  <button class="btn btn-outline-success footer_button" type="submit">Buscar</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
